--- a/.cloud66/manifest.yml
+++ b/.cloud66/manifest.yml
@@ -1,8 +1,4 @@
 rails:
   configuration:
     node_version: 16
-#    health:
-#      endpoint: "/health_check"
-#      accept:
-#      - '200'
-#      timeout: 15    
+mysql: external
