--- a/.cloud66/manifest.yml
+++ b/.cloud66/manifest.yml
@@ -1,7 +1,7 @@
 rails:
   configuration:
     node_version: 16
-    vpc_id: asdfsdf
+    vpc_id: "asdfsdf"
 #    health:
 #      endpoint: "/health_check"
 #      accept:
