--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails702_test
+  database: rails702_<%= Rails.env %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -52,5 +52,5 @@ production:
   <<: *default
   database: <%= ENV['MYSQL_DATABASE'] %>
   username: <%= ENV['MYSQL_USERNAME'] %>
-  password: <%= ENV['MYSQL_PASSWORD'] %>
+  password: <%= Rails.application.credentials.dig(:advertising_db_production, :user) %>
   host: <%= ENV['MYSQL_ADDRESS'] || ENV['MYSQL_HOST'] %>
