--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "app",
   "private": "true",
+  "engines": {  
+    "node": "16"
+  },
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
