--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   },
+  "engines": {
+    "node": "16.19"
+  },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
