--- a/.cloud66/manifest.yml
+++ b/.cloud66/manifest.yml
@@ -1,8 +1,5 @@
 rails:
   configuration:
     node_version: 16
-#    health:
-#      endpoint: "/health_check"
-#      accept:
-#      - '200'
-#      timeout: 15    
+    ruby_version: <%= ENV["RUBY_VERSION"] %>
+    iam_instance_profile_name: $IAM_INSTANCE_PROFILE_NAME
