--- a/.cloud66/deploy_hooks.yml
+++ b/.cloud66/deploy_hooks.yml
@@ -1,4 +1,8 @@
-first_thing:
+before_haproxy:
 - command: ls -la /
   target: any
   execute: true
+after_haproxy:
+- command: ls -la /
+  target: any
+  execute: true  
